--- a/DatingApp/client/src/app/members/member-messages/member-messages.component.html
+++ b/DatingApp/client/src/app/members/member-messages/member-messages.component.html
@@ -1,14 +1,14 @@
 <div class="card">
-  <div class="card-body">
+  <div class="card-body"
+      #scrollMe
+      style="overflow: scroll; height: 535px;"
+      [scrollTop]="scrollMe.scrollHeight"
+  >
     <div *ngIf="(messageService.messageThread$ | async)?.length === 0">
       no messages yet...say hii by using the message box below
     </div>
 
-    <ul #scrollMe
-      style="overflow: scroll; height: 500px;"
-      [scrollTop]="scrollMe.scrollHeight"
-
-      *ngIf="(messageService.messageThread$ | async)?.length > 0"
+    <ul *ngIf="(messageService.messageThread$ | async)?.length > 0"
        class="chat">
       <li *ngFor="let message of (messageService.messageThread$ | async)">
         <div>
@@ -50,7 +50,9 @@
         placeholder="send a private message">
 
         <div class="input-group-appened">
-          <button [disabled]="!messageForm.valid" class="btn btn-primary">send</button>
+          <button [disabled]="!messageForm.valid || loading" class="btn btn-primary">send
+            <i *ngIf="loading" class="fa fa-spinner fa-spin"></i>
+          </button>
         </div>
       </div>
     </form>
